<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pricer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_find"
        android:name="com.example.pricer.ui.find.FindFragment"
        android:label="@string/title_find"
        tools:layout="@layout/fragment_find">
        <action
            android:id="@+id/action_findFragment_to_itemFragment"
            app:destination="@id/navigation_item" />
    </fragment>
    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.pricer.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_findFragment"
            app:destination="@id/navigation_find" />
        <action
            android:id="@+id/action_listFragment_to_itemFragment"
            app:destination="@id/navigation_item" />
    </fragment>
    <fragment
        android:id="@+id/navigation_item"
        android:name="com.example.pricer.ui.item.ItemFragment"
        android:label="@string/title_item"
        tools:layout="@layout/fragment_item" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.pricer.ui.settings.SettingsFragment"
        android:label="@string/title_settings"/>

</navigation>